feat: add data library foundation
